Ajout du bouton de déconnexion

--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Inscription</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/register.css') }}">
 </head>
 <body>
     <h2>Inscription</h2>
