--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Connexion</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/login.css') }}">
 </head>
 <body>
     <h2>Connexion</h2>
